@@ -155,8 +155,6 @@
 %Styles for caml-example and friends
 \newstyle{div.caml-output}{color:maroon;}
 % Styles for toplevel mode only
-\newstyle{div.caml-example.toplevel div.caml-input::before}
-         {content:"\#"; color:black;}
 \newstyle{div.caml-example.toplevel div.caml-input}{color:\#006000;}
 
 %%% Code examples
@@ -164,25 +162,14 @@
 \newcommand{\output@color}{\maroon}
 \newcommand{\machine}{\tt}
 \newenvironment{machineenv}{\begin{alltt}}{\end{alltt}}
-\newcommand{\firstline}{\ }
-\newcommand{\examplespace}{\ }
-\newcommand{\nextline}{\examplespace\ }
-\newcommand{\@zyva}{\firstline\renewcommand{\?}{\nextline}}
-\let\?=\@zyva
-\renewcommand{\:}{\renewcommand{\?}{\@zyva}}
 \newcommand{\var}[1]{\textit{#1}}
 
 %% Caml-example environment
 \newcommand{\camlexample}[1]{
-  \ifthenelse{\equal{#1}{toplevel}}
-    {\renewcommand{\examplespace}{\ }}
-    {\renewcommand{\examplespace}{}}
-  \fi
   \@open{div}{class="caml-example #1"}
 }
 \newcommand{\endcamlexample}{
   \@close{div}
-  \renewcommand{\examplespace}{\ }
 }
 
 \newenvironment{caml}{\@open{div}{class=ocaml}}{\@close{div}}
